--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="jquery-ui/jquery-ui.css">
+<link rel="stylesheet" href="fontawesome/css/all.min.css">
 </head>
 <body>
     <!-- part1 begin-->
@@ -87,6 +88,77 @@
     </div>
     </section>
     <!--part1 end-->
+    <!--part2 begin-->
+    <section class="container part2">
+        <form action="">
+            <div class="row">
+                <div class="col-lg m-2 p-2">
+                    <label for="" class="form-label">Family Select</label>
+                    <select name="family" id="" class="form-control">
+                        <option value="1">Neocaridina</option>
+                        <option value="2">Caridina</option>
+                        <option value="3">Tiger</option>
+                    </select>
+                </div>
+                <div class="col-lg m-2 p-2">
+                    <label for="" class="form-label">Type Select</label>
+                    <select name="type" id="" class="form-control">
+                        <option value="1">Cherry</option>
+                        <option value="2">Green Jade</option>
+                        <option value="3">Orange Pumpkin</option>
+                    </select>
+                </div>
+                <div class="col-lg m-2 p-2">
+                    <label for="" class="form-label">Age Select</label>
+                    <select name="age" id="" class="form-control">
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3">3</option>
+                    </select>
+                </div>
+                <div class="col-lg m-2 p-2">
+                    <label for="" class="form-label">Size Select</label>
+                    <select name="size" id="" class="form-control">
+                        <option value="1">1</option>
+                        <option value="2">1.5</option>
+                        <option value="3">2</option>
+                    </select>
+                </div>
+                <div class="col-lg m-2 p-2">
+                    <input type="submit" class="form-control btn btn-primary" value="Search">
+                </div>
+            </div>
+        </form>
+    </section>
+    <!--part2 end-->
+    <!--part3 begin-->
+    <section class="container part3">
+        <p>OUR SERVICES</p>
+        <h3>Our Services</h3>
+        <div class="row">
+            <div class="col-sm-6 col-lg-3 lbl">
+                <i class="fa-solid fa-screwdriver-wrench"></i>
+                <h4>Caption</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, corrupti. Maxime nobis molestiae quibusdam. In!</p>
+            </div>
+            <div class="col-sm-6 col-lg-3 lbl">
+                <i class="fa-solid fa-shrimp"></i>
+                <h4>Shrimp</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, corrupti. Maxime nobis molestiae quibusdam. In!</p>
+            </div>
+            <div class="col-sm-6 col-lg-3 lbl">
+                <i class="fa-solid fa-screwdriver-wrench"></i>
+                <h4>Caption</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, corrupti. Maxime nobis molestiae quibusdam. In!</p>
+            </div>
+            <div class="col-sm-6 col-lg-3 lbl">
+                <i class="fa-solid fa-shrimp"></i>
+                <h4>Shrimp</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, corrupti. Maxime nobis molestiae quibusdam. In!</p>
+            </div>
+        </div>
+    </section>
+    <!--part3 end-->
     <script src="jquery.min.js"></script>
     <script src="jquery-ui/jquery-ui.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
