--- a/index.html
+++ b/index.html
@@ -159,6 +159,134 @@
         </div>
     </section>
     <!--part3 end-->
+    <!--part4 begin-->
+    <section class="container-fluid part4">
+        <p>WHAT WE OFFER</p>
+        <h3>Chose Your Shrimp</h3>
+        <div class="row p-4">
+            <div class="col-md-6 col-lg-3 mb-3" >
+                <div class="label">
+                    <div class="img d-flex justify-content-start align-items-end" style="background: url(images/cherry.jpg);">
+                        <div class="price">
+                            <span>$12</span>
+                        </div>
+                    </div>
+                    <h5>Cherry Shrimp</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam.</p>
+                    <div class="buttons">
+                        <button class="btn">Buy</button>
+                        <button class="btn">Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-3" >
+                <div class="label">
+                    <div class="img d-flex justify-content-start align-items-end" style="background: url(images/bluejelly.jpg);">
+                        <div class="price">
+                            <span>$18</span>
+                        </div>
+                    </div>
+                    <h5>Blue Jelly Shrimp</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam.</p>
+                    <div class="buttons">
+                        <button class="btn">Buy</button>
+                        <button class="btn">Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-3" >
+                <div class="label">
+                    <div class="img d-flex justify-content-start align-items-end" style="background: url(images/greenjade.jpg);">
+                        <div class="price">
+                            <span>$22</span>
+                        </div>
+                    </div>
+                    <h5>Green Jade Shrimp</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam.</p>
+                    <div class="buttons">
+                        <button class="btn">Buy</button>
+                        <button class="btn">Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-3" >
+                <div class="label">
+                    <div class="img d-flex justify-content-start align-items-end" style="background: url(images/orangesakura.jpg);">
+                        <div class="price">
+                            <span>$22</span>
+                        </div>
+                    </div>
+                    <h5>Orange Sakura Shrimp</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam.</p>
+                    <div class="buttons">
+                        <button class="btn">Buy</button>
+                        <button class="btn">Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-3" >
+                <div class="label">
+                    <div class="img d-flex justify-content-start align-items-end" style="background: url(images/blackrose.jpg);">
+                        <div class="price">
+                            <span>$22</span>
+                        </div>
+                    </div>
+                    <h5>Black Rose Shrimp</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam.</p>
+                    <div class="buttons">
+                        <button class="btn">Buy</button>
+                        <button class="btn">Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-3" >
+                <div class="label">
+                    <div class="img d-flex justify-content-start align-items-end" style="background: url(images/blueangel.jpg);">
+                        <div class="price">
+                            <span>$22</span>
+                        </div>
+                    </div>
+                    <h5>Blue Angel Shrimp</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam.</p>
+                    <div class="buttons">
+                        <button class="btn">Buy</button>
+                        <button class="btn">Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-3" >
+                <div class="label">
+                    <div class="img d-flex justify-content-start align-items-end" style="background: url(images/redcrystal.jpg);">
+                        <div class="price">
+                            <span>$35</span>
+                        </div>
+                    </div>
+                    <h5>Red Crystal Shrimp</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam.</p>
+                    <div class="buttons">
+                        <button class="btn">Buy</button>
+                        <button class="btn">Details</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3 mb-3" >
+                <div class="label">
+                    <div class="img d-flex justify-content-start align-items-end" style="background: url(images/yellowfire.jpg);">
+                        <div class="price">
+                            <span>$37,5</span>
+                        </div>
+                    </div>
+                    <h5>Yellow Fire Shrimp</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, totam.</p>
+                    <div class="buttons">
+                        <button class="btn">Buy</button>
+                        <button class="btn">Details</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--part4 end-->
     <script src="jquery.min.js"></script>
     <script src="jquery-ui/jquery-ui.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
