--- a/index.html
+++ b/index.html
@@ -287,6 +287,53 @@
         </div>
     </section>
     <!--part4 end-->
+    <!--part5 begin-->
+    <section class="container-fluid part5">
+        <div class="overlay"></div>
+        <div class="container">
+            <p>WORK FLOW</p>
+            <h2>How it works</h2>
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="content">
+                        <div class="img">
+                            <i class="fa-solid fa-shrimp"></i>
+                        </div>
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti esse consectetur nemo.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="content">
+                        <div class="img">
+                            <i class="fa-solid fa-shrimp"></i>
+                        </div>
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti esse consectetur nemo.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="content">
+                        <div class="img">
+                            <i class="fa-solid fa-shrimp"></i>
+                        </div>
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti esse consectetur nemo.</p>
+                    </div>
+                </div>
+                <div class="col-md-3">
+                    <div class="content">
+                        <div class="img">
+                            <i class="fa-solid fa-shrimp"></i>
+                        </div>
+                        <h3>Lorem, ipsum dolor.</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti esse consectetur nemo.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--part5 end-->
     <script src="jquery.min.js"></script>
     <script src="jquery-ui/jquery-ui.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
