--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="jquery-ui/jquery-ui.css">
 <link rel="stylesheet" href="fontawesome/css/all.min.css">
+<link rel="stylesheet" href="main.scss">
 </head>
 <body>
     <!-- part1 begin-->
@@ -334,9 +335,49 @@
         </div>
     </section>
     <!--part5 end-->
+    <!--part6 begin-->
+    <section class="container part6 mb-3">
+        <p>TESTIMONIAL</p>
+        <h2>Happy Clients</h2>
+        <div class="row">
+            <div class="col-md-4 mb-2">
+                <div class="card d-block p-3">
+                    <img src="images/person_1.jpg" alt="">
+                    <div class="card-body">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, hic.</p>
+                        <h5>Roger Scott</h5>
+                        <span>Marketting Manager</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-2">
+                <div class="card d-block p-3">
+                    <img src="images/person_1.jpg" alt="">
+                    <div class="card-body">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, hic.</p>
+                        <h5>Roger Scott</h5>
+                        <span>Marketting Manager</span>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-2">
+                <div class="card d-block p-3">
+                    <img src="images/person_2.jpg" alt="">
+                    <div class="card-body">
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, hic.</p>
+                        <h5>Roger Scott</h5>
+                        <span>Marketting Manager</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--part6 end-->
     <script src="jquery.min.js"></script>
     <script src="jquery-ui/jquery-ui.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
+    <script>
+</script>
 </body>
 </html>
