--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                         <span>Marketting Manager</span>
                     </div>
                 </div>
-            </div>
+            </div>  
             <div class="col-md-4 mb-2">
                 <div class="card d-block p-3">
                     <img src="images/person_2.jpg" alt="">
@@ -373,6 +373,30 @@
         </div>
     </section>
     <!--part6 end-->
+    <!--part7 begin-->
+    <section class="container part7">
+        <div class="row">
+            <div class="col-md-6 img" style="background: url(images/Neocaridina-davidi.jpg);"></div>
+            <article class="col-md-6">
+                <div class="caption">
+                    <p>GOOD TO KNOW</p>
+                    <h3>Find all additional information!</h3>
+                </div>
+                <p class="content">This shrimp is very hardy and quite resistant. It easily adapts to a wide range of different conditions. Moreover, its reproduction is very easy and spontaneous. This makes it an ideal shrimp for beginners.</p>
+                <p class="content">They are very sensitive to copper, a real poison for these invertebrates. To avoid contamination, thoroughly rinse any new plant before placing it in your bin. Also pay attention to fish medications that usually contain copper (read the precautions for use of the leaflet before use).</p>
+                <p class="content">The Neocaridina maintain the spawning of the fish: as detritivores, they will clean the unfertilized or moldy eggs, leaving those which are healthy. Thus, they will be excellent allies to maintain a private spawn of adult spawners.</p>
+                <p class="content">Following many selections, the colours and patterns of Neocaridina are nowadays very varied! However, in its natural environment, this shrimp is completely gray (note that there is almost no such natural form in pet shops). And about all these beautiful colours, Neocaridina breed each other regardless of their colour. However, the result of this mixture will give the young shrimps the natural colour of the species. If you want to keep the beautiful colours of your stump, do not mix the different colours of the shrimp in the same aquarium.</p>
+                <p class="content">Shrimp have an exoskeleton that they leave when they grow: this phenomenon is called moulting. After moulting, the shrimp are «soft» and very fragile. Vulnerable, their instinct will push them to hide for a while after this operation. Moulting often occurs after a change of water. It should be noted that moults are processes of growth, then of aging. Thus, a shrimp that moults too often could die prematurely. You will see this old carapace: it is translucent and is the exact shape of the shrimp.
+
+                    Tip: do not hesitate to check the little advertisements to find cheap shrimp!</p>
+                    <p class="content">ATTENTION: never release your shrimp in the nature (lake, pond, river, river...)! It’s very bad for the ecosystem!
+
+                        Here are some pictures for the pleasure of the eyes!</p>
+                <button class="btn">Search Shrimp</button>
+            </article>
+        </div>
+    </section>
+    <!--part7 end-->
     <script src="jquery.min.js"></script>
     <script src="jquery-ui/jquery-ui.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
