--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;600&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="jquery-ui/jquery-ui.css">
 <link rel="stylesheet" href="fontawesome/css/all.min.css">
-<link rel="stylesheet" href="main.scss">
 </head>
 <body>
     <!-- part1 begin-->
@@ -68,11 +67,11 @@
                         <div class="d-flex">
                           <div class="form-group mr-2 flex-grow-1">
                             <label for="">PICK-UP DATE</label>
-                            <input type="text" class="form-control" id="book_pick_date" placeholder="Date">
+                            <input type="text" class="form-control" id="visit_pick_date" placeholder="Date">
                           </div>
                           <div class="form-group ml-2 flex-grow-1">
                             <label for="">DROP-OFF DATE</label>
-                            <input type="text" class="form-control" id="book_off_date" placeholder="Date">
+                            <input type="text" class="form-control" id="visit_off_date" placeholder="Date">
                           </div>
                         </div>
                         <div class="form-group mb-3">
@@ -455,6 +454,7 @@
     <script src="jquery-ui/jquery-ui.js"></script>
     <script src="bootstrap/js/bootstrap.bundle.js"></script>
     <script src="bootstrap/js/bootstrap.js"></script>
+    <script src="jscript.js"></script>
     <script>
 </script>
 </body>
